# CPPWebsite

./: .gitignore  README.md
backend/: CMakeLists.txt  main.cpp
frontend/website/: package-lock.json
frontend/website/src/: App.tsx
frontend/website/src/components/: Home.tsx
